--- a/Temas/Tema7_Pandas.ipynb
+++ b/Temas/Tema7_Pandas.ipynb
@@ -1506,7 +1506,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ruta = r\"../Archivos/colesterol.csv\""
+    "ruta = r\"../Archivos/datasets/colesterol.csv\""
    ]
   },
   {
@@ -2316,6 +2316,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -2345,13 +2352,19 @@
     "import numpy as np\n",
     "\n",
     "df = pd.read_csv(ruta, sep = ';',decimal=',')\n",
-    "\n",
+    " \n",
+    "print(df['altura'].apply(lambda x : 2*np.exp(x)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def f(x):\n",
     "    return 2*np.exp(x)\n",
-    " \n",
-    "\n",
-    "print(df['altura'].apply(lambda x : 2*np.exp(x)))\n",
-    "print(df['altura'].apply(f))\n"
+    "print(df['altura'].apply(f))"
    ]
   },
   {
@@ -2382,20 +2395,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0   2000-03-05\n",
-      "1   2001-05-20\n",
-      "2   1999-12-10\n",
-      "Name: Nacimiento, dtype: datetime64[ns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -2424,46 +2426,82 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* `df.count()`: Devuelve una serie con el número de elementos que no son nulos ni `NaN` en cada columna del DataFrame `df`.\n",
-    "\n",
-    "* `df.sum()`: Devuelve una serie con la suma de los datos de las columnas del DataFrame `df` cuando los datos son de un tipo numérico, o la concatenación de ellos cuando son del tipo cadena `str`.\n",
-    "\n",
-    "* `df.cumsum()`: Devuelve un DataFrame con la suma acumulada de los datos de las columnas del DataFrame `df` cuando los datos son de un tipo numérico.\n",
-    "  \n",
-    "* `df.min()`: Devuelve una serie con los menores de los datos de las columnas del DataFrame `df`.\n",
-    "\n",
-    "* `df.max()`: Devuelve una serie con los mayores de los datos de las columnas del DataFrame `df`.\n",
-    "\n",
-    "* `df.mean()`: Devuelve una serie con las medias de los datos de las columnas numéricas del DataFrame `df`.\n",
-    "\n",
-    "* `df.var()`: Devuelve una serie con las varianzas de los datos de las columnas numéricas del DataFrame `df`.\n",
-    "\n",
-    "* `df.std()`: Devuelve una serie con las desviaciones típicas de los datos de las columnas numéricas del DataFrame `df`.\n",
-    "\n",
-    "* `df.cov()`: Devuelve un DataFrame con las covarianzas de los datos de las columnas numéricas del DataFrame `df`.\n",
-    "\n",
-    "* `df.corr()`: Devuelve un DataFrame con los coeficientes de correlación de Pearson de los datos de las columnas numéricas del DataFrame `df`.\n",
-    "  \n",
-    "* `df.describe(include = tipo)`: Devuelve un DataFrame con un resumen estadístico de las columnas del DataFrame `df` del tipo tipo. Para los datos numéricos (`number`) se calcula la media, la desviación típica, el mínimo, el máximo y los cuartiles. Para los datos no numéricos (`object`) se calcula el número de valores, el número de valores distintos, la moda y su frecuencia. Si no se indica el tipo solo se consideran las columnas numéricas"
+    "<center>\n",
+    "<table border=\"1\" cellpadding=\"8\" style=\"border-collapse: collapse; text-align: left;\">\n",
+    "  <tr style=\"background-color: #f2f2f2;\">\n",
+    "    <th>Método</th>\n",
+    "    <th>Descripción</th>\n",
+    "    <th>Ejemplo de Uso</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><code>df.count()</code></td>\n",
+    "    <td>Devuelve una Serie con el conteo de elementos no nulos (ni <code>NaN</code>) por columna.</td>\n",
+    "    <td><code>df.count()</code></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><code>df.sum()</code></td>\n",
+    "    <td>Devuelve la suma de valores numéricos o la concatenación de cadenas para cada columna.</td>\n",
+    "    <td><code>df.sum()</code></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><code>df.cumsum()</code></td>\n",
+    "    <td>Devuelve un DataFrame con la suma acumulada de los valores numéricos por columna.</td>\n",
+    "    <td><code>df.cumsum()</code></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><code>df.min()</code></td>\n",
+    "    <td>Devuelve una Serie con el valor mínimo de cada columna.</td>\n",
+    "    <td><code>df.min()</code></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><code>df.max()</code></td>\n",
+    "    <td>Devuelve una Serie con el valor máximo de cada columna.</td>\n",
+    "    <td><code>df.max()</code></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><code>df.mean()</code></td>\n",
+    "    <td>Devuelve una Serie con la media aritmética de las columnas numéricas.</td>\n",
+    "    <td><code>df.mean()</code></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><code>df.var()</code></td>\n",
+    "    <td>Devuelve una Serie con la varianza muestral de las columnas numéricas.</td>\n",
+    "    <td><code>df.var()</code></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><code>df.std()</code></td>\n",
+    "    <td>Devuelve una Serie con la desviación estándar (típica) de las columnas numéricas.</td>\n",
+    "    <td><code>df.std()</code></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><code>df.cov()</code></td>\n",
+    "    <td>Devuelve un DataFrame con la matriz de covarianzas entre las columnas numéricas.</td>\n",
+    "    <td><code>df.cov()</code></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><code>df.corr()</code></td>\n",
+    "    <td>Devuelve un DataFrame con los coeficientes de correlación de Pearson entre columnas numéricas.</td>\n",
+    "    <td><code>df.corr()</code></td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td><code>df.describe(include=tipo)</code></td>\n",
+    "    <td>\n",
+    "      Devuelve un resumen estadístico según el tipo de dato:<br>\n",
+    "      - Para numéricos (<code>'number'</code>): cuenta, media, desviación estándar, mínimos, máximos y cuartiles.<br>\n",
+    "      - Para objetos (<code>'object'</code>): conteo, valores únicos, moda y frecuencia.<br>\n",
+    "      - Si no se especifica, solo incluye columnas numéricas.\n",
+    "    </td>\n",
+    "    <td><code>df.describe()</code> <br> <code>df.describe(include='object')</code></td>\n",
+    "  </tr>\n",
+    "</table>\n",
+    "</center>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ruta' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/cv/9b0z6xrs33j_klsdlq5l4_2c0000gn/T/ipykernel_89868/61809975.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mruta\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msep\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m';'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdecimal\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m','\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ruta' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(ruta, sep = ';',decimal=',')\n",
@@ -2573,11 +2611,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para eliminar columnas de un DataFrame se utilizan los siguientes métodos:\n",
+    "`del` es una palabra reservada de Python que elimina una variable o atributo.\n",
+    "\n",
+    "En pandas, puedes usar del para eliminar una columna del DataFrame directamente (modifica el DataFrame original). Solo funciona para eliminar columnas, no filas\n",
     "\n",
     "<center> <code> del d[nombre]</code></center> \n",
     "\n",
-    "Elimina la columna con nombre nombre del DataFrame df.\n",
+    "También se puede utilizar el siguiente método\n",
     "\n",
     "<center> <code> df.pop(nombre) </code></center>  \n",
     "\n",
@@ -2592,8 +2632,46 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv(ruta, sep = ';',decimal=',')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "edad = df.pop('edad')\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Método `df.drop()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El método `drop()` se usa para eliminar filas o columnas de un DataFrame. Tú le dices qué filas o columnas quieres quitar usando sus etiquetas (nombres o índices).\n",
+    "\n",
+    "```python\n",
+    "df.drop(labels, axis=0, inplace=False)\n",
+    "```\n",
+    "\n",
+    "* **labels**: el nombre o lista de nombres de las filas o columnas que quieres eliminar.\n",
+    "\n",
+    "* **axis**: indica qué quieres eliminar:\n",
+    "  \n",
+    "  * axis=0 → elimina filas (valor por defecto).\n",
+    "  \n",
+    "  * axis=1 → elimina columnas.\n",
+    "\n",
+    "* **inplace**: si es True, elimina directamente del DataFrame original y no devuelve nada.\n",
+    "Si es False (por defecto), devuelve una copia del DataFrame sin esas filas o columnas, pero el original no cambia."
    ]
   },
   {
@@ -2736,7 +2814,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Eliminar las filas con dados desconocidos en un DataFrame"
+    "## Eliminar las filas con datos desconocidos en un DataFrame"
    ]
   },
   {
